person update insert delete

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ paraga/paragaweb/.project
 paraga/paragaweb/.classpath
 paraga/paragaweb/.tern-project
 paraga/paragaweb/.settings/
+paraga/paragaServices/target/
