--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ paraga/paragaweb/.classpath
 paraga/paragaweb/.tern-project
 paraga/paragaweb/.settings/
 paraga/paragaServices/target/
+paraga/paragaServices/.classpath
+paraga/paragaServices/.settings/
+paraga/paragaServices/bin/
