--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ paraga/paragaServices/target/
 paraga/paragaServices/.classpath
 paraga/paragaServices/.settings/
 paraga/paragaServices/bin/
+paraga/paragaServices/.project
