--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ askisisWeb/.settings/org.eclipse.wst.common.component
 askisisWeb/.settings/org.eclipse.jdt.core.prefs
 askisisWeb/.settings/.jsdtscope
 paraga/paragaweb/build/classes/.gitignore
+askisisWeb/.settings/org.eclipse.core.resources.prefs
