Προσθήκη util κλάσης για την διαχείρηση της περιγραφής ενός λάθους

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ askisisWeb/.settings/org.eclipse.jdt.core.prefs
 askisisWeb/.settings/.jsdtscope
 paraga/paragaweb/build/classes/.gitignore
 askisisWeb/.settings/org.eclipse.core.resources.prefs
+.recommenders/
