--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@ askisisWeb/.settings/.jsdtscope
 paraga/paragaweb/build/classes/.gitignore
 askisisWeb/.settings/org.eclipse.core.resources.prefs
 .recommenders/
-./diplomatiki_ag_workspace/Servers
-./diplomatiki_ag_workspace/.metadata
+diplomatiki_ag_workspace/Servers
+diplomatiki_ag_workspace/.metadata
